--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeetMetric</title>
+    <title>LeetMetrics</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="logo2.png" type="image/x-icon">
     
@@ -14,7 +14,7 @@
         <!-- heading
         user
         stats -->
-        <h1>LeetMetric</h1>
+        <h1>LeetMetrics</h1>
 
         <div class="user-container">
             <p>Enter your username below:</p>
