--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
        
-        <h1>LeetMetrics</h1>
+        <h1> <img src="logo.png" style="height: 40px; width: 40px;" alt="">LeetMetrics</h1>
 
         <div class="user-container">
             <p>Enter your username below:</p>
