--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1> <img src="logo.png" style="height: 40px; width: 40px;" alt="">LeetMetrics</h1>
 
         <div class="user-container">
-            <p>Enter your username below:</p>
+            <p style="color: black;">Enter your username below:</p>
             <div class="user-input-container">
-                <input type="text" placeholder="enter your username here" id="user-input">
+                <input type="text" placeholder=" Your Username" id="user-input">
                 <button id="search-btn">Search</button>
             </div>
         </div>
